--- a/ISDweek7.html
+++ b/ISDweek7.html
@@ -17,7 +17,9 @@
         <h1>Introduction To Semiconductor Devices</h1>
         <h2>Week:7</h2>
         
-        <p>
+        <p>{
+            font-size = 50px;
+            }
             <a href="https://c.tenor.com/eCwwuYz49V4AAAAC/majak-mazak.gif">Click here to see answers.</a>
         </p>
 
