--- a/ISDweek7.html
+++ b/ISDweek7.html
@@ -17,10 +17,10 @@
         <h1>Introduction To Semiconductor Devices</h1>
         <h2>Week:7</h2>
         
-        <p>{
+        <p>
+            <a {
             font-size = 50px;
-            }
-            <a href="https://c.tenor.com/eCwwuYz49V4AAAAC/majak-mazak.gif">Click here to see answers.</a>
+            } href="https://c.tenor.com/eCwwuYz49V4AAAAC/majak-mazak.gif">Click here to see answers.</a>
         </p>
 
         <p>1) An external applied gate voltage VG in a MOS structure will drop ________<br>
