--- a/ISDweek7.html
+++ b/ISDweek7.html
@@ -18,9 +18,7 @@
         <h2>Week:7</h2>
         
         <p>
-            <a {
-            font-size = 50px;
-            } href="https://c.tenor.com/eCwwuYz49V4AAAAC/majak-mazak.gif">Click here to see answers.</a>
+            <a href="https://c.tenor.com/eCwwuYz49V4AAAAC/majak-mazak.gif">Click here to see answers.</a>
         </p>
 
         <p>1) An external applied gate voltage VG in a MOS structure will drop ________<br>
