--- a/ISDweek7.html
+++ b/ISDweek7.html
@@ -46,38 +46,38 @@
                 The energy band diagram of a MOSCAP device is sketched in the figure below. Assume that the electrostatic potential is zero in the semiconductor bulk, (i.e. at<br> large distance from Si−SiO2 interface) and that there is no metal-semiconductor workfunction difference. Assume the relative dielectric constant of the oxide<br> to be ϵox=3.9. (Take ni=1010cm−3,kT=26meV,Eg=1.1eV,ϵs=11.8)</p>
             <img src="https://storage.googleapis.com/swayam-node1-production.appspot.com/assets/img/noc22_ee91/w7q05-10.JPG"><br>
             <p>4) What is the value of ϕF ?
-                a. 0.24 V<br>                
+                a. -0.24 V<br>                
                 b. 0.24 V <br>               
                 c. 0.437 V    <br>            
-                d. 0.437 V        <br>        
+                d. -0.437 V        <br>        
                 e. 0.42 V             <br>  
-                f. 0.42 V</p>  
+                f. -0.42 V</p>  
                 <p style="color:red"><b>Ans: f</b></p>
 
             <p>5) What is the surface potential, ϕs ?<br>
-                a. 0.42 V<br>
+                a. -0.42 V<br>
                 b. 0.42 V<br>
                 c. 0.3 V<br>
-                d. 0.3 V<br>
+                d. -0.3 V<br>
                 e. 0.96 V<br>
-                f. 0.96 V</p>
+                f. -0.96 V</p>
                 <p style="color:red"><b>Ans: d</b></p>
 
             <p>6) What is the applied gate voltage, VG?<br>
-                a. 0.24 V<br>
+                a. -0.24 V<br>
                 b. 0.24 V<br>
                 c. 0.42 V<br>
-                d. 0.42 V<br>
+                d. -0.42 V<br>
                 e. 0.96 V<br>
-                f. 0.96 V</p>
+                f. -0.96 V</p>
                 <p style="color:red"><b>Ans: f</b></p>
 
             <p>7) What is the voltage across the oxide, Vox?<br>
-                a. 1.26V<br>
+                a. -1.26V<br>
                 b. 1.26V<br>
                 c. 0.66V<br>
-                d. 0.66V<br>
-                e. 0.72V<br>
+                d. -0.66V<br>
+                e. -0.72V<br>
                 f. 0.72V</p>
                 <p style="color:red"><b>Ans: d</b></p>
             
@@ -158,7 +158,7 @@
                 <p style="color:red"><b>Ans: d</b></p>
 
             <p>16) Which is the correct electrostatic potential plot corresponding to given charge diagram?</p><br>
-            <img src="https://storage.googleapis.com/swayam-node1-production.appspot.com/assets/img/noc22_ee91/w7q16.JPG"><br.
+            <img src="https://storage.googleapis.com/swayam-node1-production.appspot.com/assets/img/noc22_ee91/w7q16.JPG"><br>
             <p> a. (a)<br>
                 b. (b)<br>
                 c. (c)<br>
